Fix chat overflow bug in Firefox

--- a/packages/metastream-app/src/components/chat/Chat.css
+++ b/packages/metastream-app/src/components/chat/Chat.css
@@ -40,6 +40,7 @@
 .chatWrapper {
   display: flex;
   flex-grow: 1;
+  min-height: 0;
 }
 
 .messages {
